minor changes to django_level_4 11-NOV

--- a/first_project/django_level_4/learning_templates/templates/basic_app/relative_url_template.html
+++ b/first_project/django_level_4/learning_templates/templates/basic_app/relative_url_template.html
@@ -8,6 +8,8 @@
     </head>
     <body>
         <h1>WELCOME TO RELATIVE URL TEMPLATE</h1>
-        <a href="{% url 'basic_app:other' %}"}>THE OTHER PAGE</a>
+        <a href="{% url 'basic_app:other' %}">THE OTHER PAGE</a>
+        <a href="{% url 'admin:index' %}">INDEX PAGE</a>
+        <a href="{% url 'index' %}">LINK TO INDEX</a>
     </body>
 </html>
