--- a/first_project/django_level_4/learning_templates/templates/basic_app/index.html
+++ b/first_project/django_level_4/learning_templates/templates/basic_app/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>
-
-        </title>
-    </head>
-    <body>
+{% extends "basic_app/base.html" %}
+    {% block body_block %}
         <h1>WELCOME TO INDEX</h1>
-    </body>
-</html>
+        <h2>This is index.html</h2>
+        {{ text|cut:'hel' }}
+        {{ number|add:"100" }}
+    {% endblock %}
+  
